tests/ui/parse_literal_spec.stderr
error: parser specification must start with identifier
  --> $DIR/parse_literal_spec.rs:14:18
   |
14 |     #[clap(parse("from_str"))]
   |                  ^^^^^^^^^^
